# Equalizer

./: Notes.txt  meson.build
src/: main.cpp  main.qml  meson.build
